# manual-geocoding-toolkit

./: CONTRIBUTING.md  LICENSE  README.md  generate_sample_data.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
data/: README.md  adjusted.geojson  sample_input.xlsx  sample_output.geojson  synced_output.xlsx
manual_geocoding/: cli.py  config.py  io_utils.py  placeholder.py  sync.py  utils.py
tests/: conftest.py  test_placeholder.py  test_sync.py
tutorial/: walkthrough.md
